--- a/templates/marketplace/home.html
+++ b/templates/marketplace/home.html
@@ -3,9 +3,10 @@
 {% block title %} Home {% endblock title %}
 
 
-{% block stylesheet %}
+{% block stylesheet %} {{ block.super}}
 <link rel="stylesheet" type="text/css" href="{% static 'css/homepage.css' %}" />
 {% endblock stylesheet %}
+
 {% block content %}
 
     <!-- About Start -->
@@ -182,19 +183,17 @@
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
                     <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Conditions</a>
                     <a class="btn btn-link" href="">Support</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                {% comment %} <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
                     <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
-                </div>
+                </div> {% endcomment %}
             </div>
         </div>
         <div class="container-fluid copyright">
@@ -219,7 +218,6 @@
     {% block javascript %}  
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
