--- a/templates/user/swiping.html
+++ b/templates/user/swiping.html
@@ -173,8 +173,7 @@
 
                             <div class="bg-light">
                                 <div class="card-body">
-
-                                    <div class="d-flex align-items-center">
+                                    <div class="d-flex align-items-center mt-2">
                                         <img src="{% if user.avatar %}{{ user.avatar.url }}{% else %}https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp{% endif %}"
                                              class="float-left rounded-circle avatar">
                                         <h6 class="font-weight-bold pt-1 ">{{user.first_name}}</h6>
