added more homepage info, logos, and fixed navbar logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
   <div class="container-fluid">
     <div class="navbar-brand">
-        <img class="PPlogo" src="static/img/PlayPal.png" alt="PlayPal logo" style="width: 100px; height:auto;">
+        <img class="PPlogo" src="/static/img/PlayPal.png" alt="PlayPal logo" style="width: 100px; height:auto;">
     </div>
         <button class="navbar-toggler btn-outline-success" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
