--- a/templates/marketplace/home.html
+++ b/templates/marketplace/home.html
@@ -18,8 +18,11 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <img src="static/img/PlayPal.png" alt="PlayPal isotype" class="img-fluid">
+                    <img src="static/img/logo-icon-playpal.png" alt="PlayPal logotype" class="img-fluid" style="width:20%; height:auto;">
+
                     <div class="h-100">
-                        <h1 class="display-6 mb-5">Welcome to Playpal - Where Connections Transform into Playdates!</h1>
+                        <h1 class="display-6 mb-5">Where Connections Transform into Playdates!</h1>
                         <p class="mb-5">Playpal is not just another web application; it's a vibrant community designed to bring parents together for the joy of their children. Our platform makes it easy and fun to connect with other parents in your area, fostering meaningful relationships that extend beyond the digital realm.</p>
                         {% comment %} <a class="btn btn-primary py-2 px-3 me-3" href="">
                             Learn More
@@ -154,7 +157,7 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h1 class="fw-bold text-primary mb-4">Play<span class="text-white">Pal</span></h1>
+                    <img src="static/img/PlayPal.png" alt="PlayPal isotype" class="img-fluid" style="width:80%">
                     <p>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a>
@@ -165,7 +168,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Address</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
+                    <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, Berlin, Deutschland</p>
                     <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
                     <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
                 </div>
@@ -198,7 +201,7 @@
     <!-- Footer End -->
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    {% comment %} <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a> {% endcomment %}
 
     {% block javascript %}
         <!-- JavaScript Libraries -->
