add js to buttons: not triggering views: 404 (Not Found)

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                 <a class="nav-link" href="{% url 'own_profile' %}">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Find a PlayPal</a>
+                <a class="nav-link" href="{% url 'swiping' %}">Find a PlayPal</a>
             </li>
         </ul>
         <ul class="navbar-nav ms-auto">
