--- a/apps/chat/templates/chats/room.html
+++ b/apps/chat/templates/chats/room.html
@@ -4,6 +4,7 @@
 {% block stylesheet %}
 {{block.super}}
 <link rel="stylesheet" type="text/css" href="{% static 'uikit/styles/uikit.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/chat.css' %}" />
 {% endblock stylesheet %}
 
 
