--- a/templates/user/swiping.html
+++ b/templates/user/swiping.html
@@ -17,6 +17,12 @@
 <div id="recordAction" data-url="{% url 'record_action' %}"></div>
 <div id="swipingUrl" data-url="{% url 'swiping' %}"></div>
 
+<!-- Dynamic var for js changing liked card-->
+<script>
+    var dynamicImageUrl = '{% static 'images/card_bg/liked.png' %}';
+</script>
+
+
 <div class="wrapper">
     <div class="d-md-flex align-items-md-center">
         <div class="h3">Find a PlayPal</div>
@@ -171,7 +177,7 @@
                     <!-- User Card -->
                     <div class="col-lg-4 col-md-6 col-sm-12 offset-md-0 offset-sm-1">
                         <div class="card shadow" data-user-id="{{ user.uuid }}"><img class="card-img-top"
-                                                      src="{% static 'images/card_bg/vivid-blurred-colorful-wallpaper-background.jpg' %}">
+                                                      src="{% static 'images/card_bg/basic_blue_card.png' %}">
 
                             <div class="bg-light">
                                 <div class="card-body">
